[gd_scene load_steps=27 format=2]

[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Characters/Input/PlayerInputHandler.gd" type="Script" id=3]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_idle_anim_strip_4.png" type="Texture" id=4]
[ext_resource path="res://Characters/Player/States/Move.gd" type="Script" id=5]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_run_anim_strip_6.png" type="Texture" id=6]
[ext_resource path="res://Characters/Player/States/Falling.gd" type="Script" id=7]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_jump_down_anim_strip_3.png" type="Texture" id=8]
[ext_resource path="res://Characters/Player/States/Jump.gd" type="Script" id=9]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_jump_up_anim_strip_3.png" type="Texture" id=10]
[ext_resource path="res://Characters/Player/States/PlayerIdle.gd" type="Script" id=11]
[ext_resource path="res://Effects/SwordAttack.tscn" type="PackedScene" id=12]
[ext_resource path="res://Characters/Player/States/SwordAttack.gd" type="Script" id=13]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_attack_anim_strip_4(new).png" type="Texture" id=14]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_hit_anim_strip_3.png" type="Texture" id=15]
[ext_resource path="res://Effects/JumpDustEffect.tscn" type="PackedScene" id=16]
[ext_resource path="res://Assets/herochar sprites(new)/herochar_death_anim_strip_8.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[sub_resource type="Animation" id=2]
resource_name = "Die"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 18 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=7]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=8]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("StateMachine/SwordAttack")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "create_sword_attack"
} ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5, 7 )

[node name="Player" instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 2
script = ExtResource( 2 )

[node name="Collisor" parent="." index="1"]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="Sprite" parent="." index="2"]
texture = ExtResource( 4 )
hframes = 4

[node name="AnimationPlayer" parent="." index="3"]
anims/Die = SubResource( 2 )
anims/Falling = SubResource( 3 )
anims/Hit = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Jump = SubResource( 6 )
anims/Move = SubResource( 7 )
anims/SwordAttack = SubResource( 8 )

[node name="Hurtbox" parent="." index="4"]
collision_layer = 1

[node name="HurtArea" parent="Hurtbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 9 )

[node name="InputHandler" parent="." index="5"]
script = ExtResource( 3 )

[node name="Idle" parent="StateMachine" index="0"]
script = ExtResource( 11 )

[node name="Move" type="Node2D" parent="StateMachine" index="3"]
script = ExtResource( 5 )

[node name="Falling" type="Node2D" parent="StateMachine" index="4"]
script = ExtResource( 7 )

[node name="Jump" type="Node2D" parent="StateMachine" index="5"]
script = ExtResource( 9 )
JumpEffect = ExtResource( 16 )

[node name="CoyoteTimer" type="Timer" parent="StateMachine/Jump" index="0"]
wait_time = 0.15
one_shot = true
autostart = true

[node name="JumpEffectPosition" type="Position2D" parent="StateMachine/Jump" index="1"]
position = Vector2( 0, 2 )

[node name="SwordAttack" type="Node2D" parent="StateMachine" index="6"]
script = ExtResource( 13 )
SwordEffect = ExtResource( 12 )

[node name="Slash" type="Position2D" parent="StateMachine/SwordAttack" index="0"]
position = Vector2( 13, 0 )

[connection signal="state_changed" from="StateMachine" to="StateMachine/Jump" method="_on_StateMachine_state_changed"]

[editable path="Hurtbox"]
